Update package description to clarify functionality and integration with phpmnd

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "php-magic-number-detector",
     "displayName": "PHP Magic Number Detector",
-    "description": "Magic Number Detector",
+    "description": "Integrates phpmnd to detect magic numbers in PHP code and display them in the Problems panel",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.105.0"
